css/style.css
*{
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
body {
    -webkit-animation: fadein 1s;
    -moz-animation: fadein 1s;
    animation: fadein 1s;
    background: #333;
}
ol, ul {
    list-style: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
h1, h2, h3, h4, h5, h6 {
    color: orange;
    margin-bottom: 10px;
}
h1 {
    font-size: 2rem;
}
h2 {
    font-size: 1.8rem;
}
h3 {
    font-size: 1.6rem;
}
h4 {
    font-size: 1.4rem;
}
h5 {
    font-size: 1.2rem ;
}
h6 {
    font-size: 1rem;
}
section{
    margin-bottom: 10px;
}
.clearfix:after {
    content: ".";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
}
p{
    color: #FFF;
    line-height: 1.2em;
    margin-bottom: 20px;
}
.site-container {
    position: relative;
}
#main-content{
    margin: 0 auto;
    overflow-y: auto;
    padding-top: 60px;
    width: 65%;
}
/* HEADER */
header {
    background: #333;
    height: 60px;
    position: fixed;
    width: 100%;
    z-index: 10;
}
header button {
    background: #333;
    border: none;
    color: #FFF;
    display: block;
    font-size: 2.2rem;
    padding-top: 5px;
    text-align: center;
    top: 0;
    width: 50px;
    height: 50px;
}
header button:hover,
header button:focus{
    color: #333;
    background: orange;
    -moz-transition:
        background .2s .1s,
        color .2s .1s;
    -webkit-transition:
        background .2s .1s,
        color .2s .1s;
    transition:
        background .2s .1s,
        color .2s .1s;
}
/* NAVIGATION */
.nav-container{
    background: #555;
    bottom: 0;
    display: inline-block;
    position: fixed;
    top: 0;
    width: 0;
    opacity: 0;
    overflow: hidden;
    -moz-transition: width .5s,
        opacity .5s;
    -webkit-transition: width .5s,
        opacity .5s;
    transition: width: .5s,
        opacity .5s;
}
.nav-container.menu-open{
    width: 25%;
    opacity: 1;
}
.nav-container ul{
    padding: 0;
    margin: 0;
}
.nav-container li{
    margin: 0;
}
.nav-container a:before{
    margin-right: 10px;
}
.nav-container a{
    color: #FFF;
    border-bottom: 5px solid #555;
    font-size: 1.5em;
    padding: 15px 5px;
    width: 100%;
}
.nav-container a:hover,
.nav-container a:focus{
    background: #333;
    border-bottom: 5px solid orange;
    color: orange;
    text-decoration: none;
}
.site-section{
    left: 0;
    -moz-transition: left .5s;
    -webkit-transition: left .5s;
    transition: left .5s;
}
.site-section.menu-open{
    position: absolute;
    right: 0;
    left: 25%;
}

/* MISC */
.rounded-img {
    width: 200px;
    border-radius: 50%;
    background: #555;/*#A5A5A5;*/
    padding: 7px;
    margin: 10px 0;
}

/* HOME */
.home h1{
    font-size: 4rem;
}
.home h1+p{
    font-size: 2rem;
}
.resume{
    color: #FFF;
}
.resume:hover,
.resume:focus{
    color: #FFF;
    text-decoration: none;
}
.resume:before{
    color: orange;
    content: "\f019";
    font-family: "FontAwesome";
    font-size: 4em;
}

/* PORTFOLIO - SECTION */
.portfolio-section a {
    background: #555;
    text-decoration: none;
}
.portfolio-section a:hover,
.portfolio-section a:focus{
    background: orange;
    -moz-transition:
        background .2s .1s;
    -webkit-transition:
        background .2s .1s;
    transition:
        background .2s .1s;
}
.portfolio-section a:after{
    content: '';
    -moz-transition:
        background .2s .1s;
    -webkit-transition:
        background .2s .1s;
    transition:
        background .2s .1s;
}
.portfolio-section a:hover:after,
.portfolio-section a:focus:after {
    background: orange;
    bottom: 41px;
    content: '';
    height: 10px;
    position: absolute;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    width: 10px;
}
.portfolio-section .frame {
    background: inherit; /*#A5A5A5;*/
    margin: 10px 0;
    padding: 7px;
    
}
.portfolio-section .frame:hover {
    background: inherit;
}
.portfolio-section .frame .content{
    overflow: hidden;
    max-height: 200px;
}

/* SOCIAL-MEDIA */
.social-media-items{
    vertical-align: top;
}
.social-media a{
    background: #555; /*#A5A5A5;*/
    border-radius: 50%;
    color: #FFF;
    display: block;
    margin: 10px auto;
    padding: 25px;
    width: 150px;
}
.social-media a:hover,
.social-media a:focus{
    background: orange;
    color: #333;
    -moz-transition:
        background .2s .1s,
        color .2s .1s;
    -webkit-transition:
        background .2s .1s,
        color .2s .1s;
    transition:
        background .2s .1s,
        color .2s .1s;
}
.font-icons{
    font-size: 7em;
    color: inherit;
}
/* CSS that spans across multiple pages */
.home, .portfolio, .social-media, .font-icons {
    -webkit-animation: fadein 1s;
    -moz-animation: fadein 1s;
    animation: fadein 1s;
}
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.portfolio-section .col-xs-3,
.social-media .col-xs-3 {
    float: none;
    display: inline-block;
    width: inherit;
}

/* FOOTER */
.copyright{
    color: #555;
}

/* MODAL */
.modal h1,
.modal h1 a,
.modal p {
    color: #000;
}

/* MEDIA QUERIES */
@media (max-width: 30.69rem){ /* 491px */
    .nav-container.menu-open{
        width: 50%;
    }
    .site-section.menu-open{
        left: 50%;
    }
}
/* No greater than 687px, no less than 492px */
@media (max-width: 42.94rem) and (min-width: 30.75rem){ 
    .nav-container.menu-open{
        width: 35%;
    }
    .site-section.menu-open{
        left: 35%;
    }
}
@media (min-width: 56.25rem){ /* 900px */
    .modal-dialog{
        width: 900px;
    }
}
@media (max-width: 64rem){ /* 1024px */
    #main-content{
        width: 85%;
    }
}
@media (min-width: 100rem){ /* 1600px */
    #main-content{
        width: 70%;
    }
}

